<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:text="@string/total"
        android:textSize="@dimen/text_size_payment_fragment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ikigaiworks.letseat.ui.view.customview.PriceTextView
        android:id="@+id/total_prize_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_payment_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="25,50€" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        android:text="@string/confirm_text_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/visa_button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/visa" />

    <ImageButton
        android:id="@+id/mastercard_button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/paypal_button"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/visa_button"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/mastercard" />

    <ImageButton
        android:id="@+id/paypal_button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/paypal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/edittext_name_payment"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mastercard_button" />

    <EditText
        android:id="@+id/payment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:ems="8"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        android:background="@color/background_grey_dark"
        android:text="@string/hardcoded_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/edittext_card_payment"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_name" />

    <EditText
        android:id="@+id/payment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/background_grey_dark"
        android:ems="8"
        android:inputType="text"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:text="@string/hardcoded_account" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/expiration_date_payment"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_card" />

    <EditText
        android:id="@+id/date_expiration_payment"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/background_grey_dark"
        android:ems="10"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:inputType="number"
        android:text="@string/hardcoded_date"
        android:maxLength="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/cvv_payment"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_card" />

    <EditText
        android:id="@+id/cvv_payment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/background_grey_dark"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="12dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:textSize="@dimen/text_size_payment_title_desc_fragment"
        android:inputType="number"
        android:maxLength="3"
        android:text="@string/hardcoded_number_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvv_payment" />

    <Button
        android:id="@+id/pay"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient_rectangle"
        android:padding="15dp"
        android:text="@string/confirm_pay"
        android:textColor="#FFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />



</android.support.constraint.ConstraintLayout>